--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <h1>
             Rock Paper Scissors Game
         </h1>
+        <p>To play, open console and type playGame()</p>
         <script type="text/javascript" src="RPS_game.js"></script>
     </body>
 </html>
