add animation to win condition

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </div>
             </div>
 
-            <div id="gameResult" style="text-align: center; margin-top: 20px;">
+            <div id="gameResult" style="text-align: center; margin-top: 20px; transition: all .25s ease;">
                 <p></p>
             </div>
             <button class="resetButton" id="btnResetGame">Reset Game?</button>
