--- a/index.html
+++ b/index.html
@@ -54,5 +54,11 @@
             </div>
             <button class="resetButton" id="btnResetGame">Reset Game?</button>
         </div>
+        <footer>
+            Developed by Michael Phelps
+            <a target="_blank" rel="noopener noreferrer" href="https://github.com/mpphelps/RockPaperScissors" style="margin-left: 10px;">
+                <img class="gitHubLogo" src="Images/GitHub.png" alt="GitHub OctoCat logo">
+            </a>
+        </footer>
     </body>
 </html>
