Revised Game Over Text

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         Tie Count: <span id="tieCount">0</span>
                     </div>
                     <div>
-                        Round: <span id="roundNumber"></span>
+                        <span id="roundNumber"></span>
                     </div>
                 </div>
                 <div>
